<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentDono"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DonoFragment">

    <EditText
        android:id="@+id/etNomeDono"
        android:layout_width="356dp"
        android:layout_height="48dp"
        android:layout_marginTop="124dp"
        android:ems="10"
        android:hint="@string/nome"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.29"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:textColorHint="@color/black" />

    <EditText
        android:id="@+id/etCEPDono"
        android:layout_width="356dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/cep"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.29"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNomeDono"
        tools:textColorHint="@color/black" />

    <EditText
        android:id="@+id/etFoneDono"
        android:layout_width="356dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/telefone"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.29"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCEPDono"
        tools:textColorHint="@color/black" />

    <EditText
        android:id="@+id/etEmailDono"
        android:layout_width="356dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.29"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etFoneDono"
        tools:textColorHint="@color/black" />

    <TextView
        android:id="@+id/tvFindOneDono"
        android:layout_width="355dp"
        android:layout_height="130dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.392"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDeleteDono"
        app:layout_constraintVertical_bias="0.506" />

    <Button
        android:id="@+id/btnInsertDono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="#B7F86C6C"
        android:text="@string/insert"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/btnUpdateDono"
        app:layout_constraintHorizontal_bias="0.124"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmailDono" />

    <Button
        android:id="@+id/btnUpdateDono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="#B7F86C6C"
        android:text="@string/update"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.878"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmailDono" />

    <Button
        android:id="@+id/btnDeleteDono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:backgroundTint="#B7F86C6C"
        android:text="@string/delete"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/btnFindOneDono"
        app:layout_constraintHorizontal_bias="0.114"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnInsertDono" />

    <Button
        android:id="@+id/btnFindOneDono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:backgroundTint="#B7F86C6C"
        android:text="@string/showOne"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/tvFindOneDono"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.888"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUpdateDono"
        app:layout_constraintVertical_bias="0.03" />

</androidx.constraintlayout.widget.ConstraintLayout>